<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medic"
                            android:textSize="30sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/inter_semi_bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tech"
                            android:textSize="30sp"
                            android:textColor="#3390FF"
                            android:fontFamily="@font/inter_semi_bold"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comprehensive_family_healthcare"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/inter_semi_bold"/>

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/stepText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_2_2"
                android:textColor="@color/main_color"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:id="@+id/registrationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/sign_up_page_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/horoscope" />

            <LinearLayout
                android:id="@+id/layoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="32dp">

                <EditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edit_text_background"
                    android:padding="14dp"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:autofillHints="name" />

                <EditText
                    android:id="@+id/addressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edit_text_background"
                    android:padding="14dp"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:autofillHints="postalAddress"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bloodTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_type"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/filledExposed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:background="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/healthStatusLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/health_status"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/healthStatusSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:background="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/phoneNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edit_text_background"
                    android:padding="14dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:autofillHints="phone"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/selectDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:padding="10dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>