<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".Fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.SampleProject.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:background="@drawable/tool_bar_gradient">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medic"
                            android:textSize="22sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/inter_semi_bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tech"
                            android:textSize="22sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/inter_semi_bold"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comprehensive_family_healthcare"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/inter_semi_bold"/>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/userNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAllCaps="false"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:clickable="false"
                    android:focusable="false"
                    app:cornerRadius="32dp"/>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.SampleProject.PopupOverlay" >

                <ImageView
                    android:id="@+id/cameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person_icon"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?selectableItemBackground"
                    android:contentDescription="@string/camera" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectStartDateButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_start_date"
                    android:padding="7dp"
                    android:textAlignment="center"
                    android:layout_marginEnd="16dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectEndDateButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_end_date"
                    android:padding="7dp"
                    android:textAlignment="center"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showDataButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/show_data"
                android:textAlignment="center"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/main_color"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/dataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:visibility="gone">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/bloodOxygenLevelLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@android:color/white"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/heartRateLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@android:color/white"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/bodyTemperatureLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@android:color/white"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/emergencyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                app:cornerRadius="26dp"
                android:backgroundTint="#FF0000"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="22dp"
                android:drawableEnd="@drawable/notifications"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>